syntax = "proto3";

import "proto/vega.proto";
import "proto/markets.proto";

package grpc;

option go_package = "code.vegaprotocol.io/vega/internal/api";

import "google/protobuf/empty.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

service trading {
  // unary calls - writes
  rpc SubmitOrder(vega.OrderSubmission) returns (vega.PendingOrder);
  rpc CancelOrder(vega.OrderCancellation) returns (vega.PendingOrder);
  rpc AmendOrder(vega.OrderAmendment) returns (OrderResponse);

  // unary calls - read
  rpc OrdersByMarket(OrdersByMarketRequest) returns (OrdersByMarketResponse);
  rpc OrdersByParty(OrdersByPartyRequest) returns (OrdersByPartyResponse);
  rpc OrderByMarketAndId(OrderByMarketAndIdRequest) returns (OrderByMarketAndIdResponse);
  rpc Markets(google.protobuf.Empty) returns (MarketsResponse);
  rpc Candles(CandlesRequest) returns (CandlesResponse);
  rpc MarketDepth(MarketDepthRequest) returns (MarketDepthResponse);
  rpc TradesByMarket(TradesByMarketRequest) returns (TradesByMarketResponse);
  rpc PositionsByParty(PositionsByPartyRequest) returns (PositionsByPartyResponse);

  rpc Statistics(google.protobuf.Empty) returns (vega.Statistics);
  rpc GetVegaTime(google.protobuf.Empty) returns (VegaTimeResponse);

  // streams
  rpc OrdersSubscribe(OrdersSubscribeRequest) returns (stream vega.Order);
  rpc TradesSubscribe(TradesSubscribeRequest) returns (stream vega.Trade);
  rpc CandlesSubscribe(CandlesSubscribeRequest) returns (stream vega.Candle);
  rpc MarketDepthSubscribe(MarketDepthSubscribeRequest) returns (stream vega.MarketDepth);
  rpc PositionsSubscribe(PositionsSubscribeRequest) returns (stream vega.MarketPosition);
}

message OrdersSubscribeRequest {
  string marketID = 1;
  string partyID = 2;
}

message TradesSubscribeRequest {
  string marketID = 1;
  string partyID = 2;
}

message CandlesSubscribeRequest {
  string marketID = 1;
  vega.Interval interval = 2;
}

message MarketDepthSubscribeRequest {
  string marketID = 1;
}

message PositionsSubscribeRequest {
  string partyID = 1;
}

message OrderResponse {
  bool success = 1;
  string reference = 2;
}

message OrdersByMarketRequest {
  string marketID = 1 [(validator.field) = {msg_exists : true}];
  OptionalParams params = 2;
}

message OrdersByMarketResponse {
  repeated vega.Order orders = 1;
}

message OrdersByPartyRequest {
  string partyID = 1 [(validator.field) = {msg_exists : true }];
  OptionalParams params = 2;
}

message OrdersByPartyResponse {
  repeated vega.Order orders = 1;
}

message OrderByMarketAndIdRequest {
  string marketID = 1 [(validator.field) = {msg_exists : true }];
  string id = 2 [(validator.field) = {msg_exists : true}];
}

message OrderByMarketAndIdResponse {
  vega.Order order = 1;
}

message MarketsResponse {
  repeated vega.Market markets = 1;
}

message CandlesRequest {
  string market = 1 [(validator.field) = {msg_exists : true}];
  int64 sinceTimestamp = 2 [(validator.field) = {int_gt: 0}];
  vega.Interval interval = 3;
}

message CandlesResponse {
  repeated vega.Candle candles = 1;
}

message MarketDepthRequest {
  string market = 1 [(validator.field) = {msg_exists: true}];
}

message MarketDepthResponse {
  string marketID = 1;
  repeated vega.PriceLevel buy = 2;
  repeated vega.PriceLevel sell = 3;
  vega.Trade lastTrade = 4;
}

message TradesByMarketRequest {
  string marketID = 1 [(validator.field) = {msg_exists: true}];
  OptionalParams params = 2;
}

message TradesByMarketResponse {
  repeated vega.Trade trades = 1;
}

message PositionsByPartyRequest{
  string partyID = 1 [(validator.field) = {msg_exists: true}];
}

message PositionsByPartyResponse{
  repeated vega.MarketPosition positions = 1;
}

message VegaTimeResponse {
  int64 timestamp = 1;
}

message OptionalParams {
  uint64 limit = 1 [(validator.field) = {int_lt: 50}];
}
